--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,15 +3,14 @@
 
 name: Go
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+on: [push, pull_request]
 jobs:
-
-  build:
+  test:
+    strategy:
+      matrix:
+        go:
+          - "1.20"
+          - "1.21"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -19,7 +18,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: ${{ matrix.go }}
 
     - name: Build
       run: go build -v ./...
